add history predictions
